--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
         <artifactId>my-tomcat-infrastructure</artifactId>
         <version>1.0.0-Release</version>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>4.0.1</version>
+        <scope>provided</scope>
+    </dependency>
+    
+    
   </dependencies>
   
   <build>
